airflow/logs/dag_id=Gold_training_Pipeline1/run_id=manual__2024-10-03T105728.334546+0000/task_id=preprocess_the_extracted_data/attempt=3.log
[2024-10-03T10:57:59.017+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Gold_training_Pipeline1.preprocess_the_extracted_data manual__2024-10-03T10:57:28.334546+00:00 [queued]>
[2024-10-03T10:57:59.023+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Gold_training_Pipeline1.preprocess_the_extracted_data manual__2024-10-03T10:57:28.334546+00:00 [queued]>
[2024-10-03T10:57:59.024+0000] {taskinstance.py:2193} INFO - Starting attempt 3 of 4
[2024-10-03T10:57:59.034+0000] {taskinstance.py:2217} INFO - Executing <Task(PythonOperator): preprocess_the_extracted_data> on 2024-10-03 10:57:28.334546+00:00
[2024-10-03T10:57:59.037+0000] {standard_task_runner.py:60} INFO - Started process 805 to run task
[2024-10-03T10:57:59.039+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Gold_training_Pipeline1', 'preprocess_the_extracted_data', 'manual__2024-10-03T10:57:28.334546+00:00', '--job-id', '221', '--raw', '--subdir', 'DAGS_FOLDER/gold_training_pipeline.py', '--cfg-path', '/tmp/tmpedhxij3u']
[2024-10-03T10:57:59.041+0000] {standard_task_runner.py:88} INFO - Job 221: Subtask preprocess_the_extracted_data
[2024-10-03T10:57:59.156+0000] {task_command.py:423} INFO - Running <TaskInstance: Gold_training_Pipeline1.preprocess_the_extracted_data manual__2024-10-03T10:57:28.334546+00:00 [running]> on host 5466e3b84b5d
[2024-10-03T10:57:59.203+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='sdeshan' AIRFLOW_CTX_DAG_ID='Gold_training_Pipeline1' AIRFLOW_CTX_TASK_ID='preprocess_the_extracted_data' AIRFLOW_CTX_EXECUTION_DATE='2024-10-03T10:57:28.334546+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-03T10:57:28.334546+00:00'
[2024-10-03T10:57:59.231+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/components/gold/model_training/data_preprocessing.py", line 18, in preprocess_data
    create_table(data_table,
  File "/opt/airflow/dags/components/utils/database_table_creation.py", line 20, in create_table
    cur.execute(f"""
psycopg2.errors.SyntaxError: syntax error at or near "usd_selling_exrate"
LINE 3: ...00_index  VARCHAR(255),nyse_com_index VARCHAR(255)usd_sellin...
                                                             ^

[2024-10-03T10:57:59.260+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=Gold_training_Pipeline1, task_id=preprocess_the_extracted_data, execution_date=20241003T105728, start_date=20241003T105759, end_date=20241003T105759
[2024-10-03T10:57:59.268+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 221 for task preprocess_the_extracted_data (syntax error at or near "usd_selling_exrate"
LINE 3: ...00_index  VARCHAR(255),nyse_com_index VARCHAR(255)usd_sellin...
                                                             ^
; 805)
[2024-10-03T10:57:59.292+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-10-03T10:57:59.380+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
